--- a/README.html
+++ b/README.html
@@ -9,7 +9,7 @@
     <style>
         body {
             font-family: 'Playfair Display', serif; /* Fonte Playfair Display para o texto */
-            background-color: #333333; /* Fundo grafite */
+            background-color: #1c1c1c; /* Fundo cinza ainda mais escuro */
             color: #dcdcdc; /* Texto cinza clarinho */
             margin: 0;
             padding: 0;
@@ -23,7 +23,7 @@
         h1, h2 {
             font-family: 'Lato', sans-serif; /* Fonte Lato ExtraBold para os títulos */
             font-weight: 900;
-            color: #dcdcdc;
+            color: #dcdcdc; /* Cor do título */
         }
 
         .gallery {
@@ -48,7 +48,7 @@
     </style>
 </head>
 <body>
-    <h1>GN, Gefter Natã</h1>
+    <h1>Gefter Natã</h1>
     <h2>Bem-vindo ao meu Portfólio</h2>
     <p>Aqui estão alguns dos meus trabalhos:</p>
     
