--- a/Index.html
+++ b/Index.html
@@ -20,8 +20,8 @@
             text-align: center;
         }
 
-        h1, h2 {
-            font-family: 'Lato', sans-serif; /* Fonte Lato ExtraBold para os títulos */
+        h1 {
+            font-family: 'Lato', sans-serif; /* Fonte Lato ExtraBold para o título */
             font-weight: 900;
             color: #dcdcdc; /* Cor do título */
         }
@@ -49,7 +49,6 @@
 </head>
 <body>
     <h1>Gefter Natã</h1>
-    <h2>Bem-vindo ao meu Portfólio</h2>
     <p>Aqui estão alguns dos meus trabalhos:</p>
     
     <div class="gallery">
