--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         }
 
         .logo {
-            max-width: 150px; /* Ajuste o tamanho da logo aqui */
+            max-width: 50px; /* Reduzi a logo para 1/3 do tamanho original */
             margin-bottom: 20px;
         }
     </style>
@@ -54,7 +54,7 @@
 <body>
     <img src="unnamed.png" alt="Logo" class="logo">
 
-    <h1><a href="#canva">Gefter Natã</a></h1>
+    <h1><a href="canva.html" target="_blank">Gefter Natã</a></h1>
 
     <div class="gallery">
         <img src="_MG_9144-2.jpg" alt="Projeto 1">
@@ -62,15 +62,5 @@
         <img src="_MG_9170-2.jpg" alt="Projeto 3">
         <img src="_MG_9196-2.jpg" alt="Projeto 4">
     </div>
-
-    <!-- Seção do Canva -->
-    <div id="canva" style="position: relative; width: 100%; height: 0; padding-top: 56.2225%;
-        padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
-        border-radius: 8px; will-change: transform;">
-        <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-            src="https://www.canva.com/design/DAGgUL4SaSQ/Jxvt3-WsYL0D6wHhiJNOdw/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
-        </iframe>
-    </div>
-    <a href="https://www.canva.com/design/DAGgUL4SaSQ/Jxvt3-WsYL0D6wHhiJNOdw/view?utm_content=DAGgUL4SaSQ&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">TESTE</a> de Gefter Natã
 </body>
 </html>
