--- a/canva.html
+++ b/canva.html
@@ -22,8 +22,8 @@
 </head>
 <body>
     <div class="container">
-        <iframe loading="lazy" style="width: 100%; height: 80vh; border: none; border-radius: 8px;"
-            src="https://www.canva.com/design/DAGgUL4SaSQ/Jxvt3-WsYL0D6wHhiJNOdw/view?embed" 
+        <iframe loading="lazy" style="width: 100%; height: 90vh; border: none; border-radius: 8px;"
+            src="https://www.canva.com/design/DAGgUL4SaSQ/Jxvt3-WsYL0D6wHhiJNOdw/view" 
             allowfullscreen="allowfullscreen" allow="fullscreen">
         </iframe>
     </div>
