--- a/index.html
+++ b/index.html
@@ -19,11 +19,6 @@
             font-weight: 800; /* ExtraBold */
         }
 
-        h1 a {
-            text-decoration: none;
-            color: #d9d9d9;
-        }
-
         .gallery {
             display: flex;
             flex-wrap: wrap;
@@ -54,13 +49,13 @@
 <body>
     <img src="unnamed.png" alt="Logo" class="logo">
 
-    <h1><a href="canva.html" target="_blank">Gefter Natã</a></h1>
+    <h1>Gefter Natã</h1>
 
     <div class="gallery">
         <img src="_MG_9144-2.jpg" alt="Projeto 1">
         <img src="_MG_9148-2.jpg" alt="Projeto 2">
-        <img src="_MG_9170-2.jpg" alt="Projeto 3">
-        <img src="_MG_9196-2.jpg" alt="Projeto 4">
+        <img src="_MG_9670-2.jpg" alt="Projeto 3">
+        <img src="_MG_9796-2.jpg" alt="Projeto 4">
     </div>
 </body>
 </html>
