--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
     <h1>Gefter Natã</h1>
 
     <div class="gallery">
-        <img src="_MG_9144-2.jpg" alt="Projeto 1">
-        <img src="_MG_9148-2.jpg" alt="Projeto 2">
-        <img src="_MG_9670-2.jpg" alt="Projeto 3">
-        <img src="_MG_9796-2.jpg" alt="Projeto 4">
+        <img src="001.jpg" alt="Projeto 1">
+        <img src="002.jpg" alt="Projeto 2">
+        <img src="003.jpg" alt="Projeto 3">
+        <img src="004.jpg" alt="Projeto 4">
     </div>
 </body>
 </html>
