--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <style>
         body {
             font-family: 'Playfair Display', serif;
-            background-color: #1a1a1a; /* Fundo cinza escuro */
-            color: #d9d9d9; /* Cinza claro */
+            background-color: #1a1a1a;
+            color: #d9d9d9;
             margin: 0;
             padding: 50px;
             text-align: center;
@@ -16,7 +16,7 @@
         
         h1 {
             font-family: 'Lato', sans-serif;
-            font-weight: 800; /* ExtraBold */
+            font-weight: 800;
         }
 
         .gallery {
@@ -25,13 +25,25 @@
             justify-content: center;
             gap: 20px;
             margin-top: 30px;
+            max-width: 90vw;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        .gallery .image-container {
+            position: relative;
+            width: 340px; /* Aumentei o tamanho das imagens */
+            height: auto;
+            border-radius: 20px;
+            overflow: hidden;
         }
 
         .gallery img {
-            width: 280px;
+            width: 100%;
             height: auto;
+            display: block;
             border-radius: 20px;
-            box-shadow: 2px 2px 15px rgba(0,0,0,0.2);
+            box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.2);
             transition: transform 0.3s ease-in-out;
         }
 
@@ -40,22 +52,47 @@
         }
 
         .logo {
-            max-width: 50px; /* Reduzi a logo para 1/3 do tamanho original */
+            max-width: 50px;
             margin-bottom: 20px;
+        }
+
+        .overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: url('unnamed.png') center/contain no-repeat;
+            opacity: 0;
+            transition: opacity 0.3s ease-in-out;
+        }
+
+        .image-container:hover .overlay {
+            opacity: 0.15;
         }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@800&family=Playfair+Display&display=swap" rel="stylesheet">
 </head>
 <body>
     <img src="unnamed.png" alt="Logo" class="logo">
-
     <h1>Gefter Natã</h1>
-
     <div class="gallery">
-        <img src="001.jpg" alt="Projeto 1">
-        <img src="002.jpg" alt="Projeto 2">
-        <img src="003.jpg" alt="Projeto 3">
-        <img src="004.jpg" alt="Projeto 4">
+        <div class="image-container">
+            <img src="001.jpg" alt="Projeto 1">
+            <div class="overlay"></div>
+        </div>
+        <div class="image-container">
+            <img src="002.jpg" alt="Projeto 2">
+            <div class="overlay"></div>
+        </div>
+        <div class="image-container">
+            <img src="003.jpg" alt="Projeto 3">
+            <div class="overlay"></div>
+        </div>
+        <div class="image-container">
+            <img src="004.jpg" alt="Projeto 4">
+            <div class="overlay"></div>
+        </div>
     </div>
 </body>
 </html>
