--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         .gallery .image-container {
             position: relative;
-            width: 340px; /* Aumentei o tamanho das imagens */
+            width: 280px; /* Retornando ao tamanho original */
             height: auto;
             border-radius: 20px;
             overflow: hidden;
@@ -58,17 +58,17 @@
 
         .overlay {
             position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
+            bottom: 10px;
+            right: 10px;
+            width: 50px;
+            height: 50px;
             background: url('unnamed.png') center/contain no-repeat;
             opacity: 0;
             transition: opacity 0.3s ease-in-out;
         }
 
         .image-container:hover .overlay {
-            opacity: 0.15;
+            opacity: 0.8;
         }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@800&family=Playfair+Display&display=swap" rel="stylesheet">
