--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         .gallery .image-container {
             position: relative;
-            width: 280px; /* Retornando ao tamanho original */
+            width: 280px;
             height: auto;
             border-radius: 20px;
             overflow: hidden;
@@ -58,17 +58,19 @@
 
         .overlay {
             position: absolute;
-            bottom: 10px;
+            bottom: 0px;
             right: 10px;
             width: 50px;
             height: 50px;
             background: url('unnamed.png') center/contain no-repeat;
             opacity: 0;
-            transition: opacity 0.3s ease-in-out;
+            transform: translateY(10px);
+            transition: opacity 0.5s ease-out, transform 0.5s ease-out;
         }
 
         .image-container:hover .overlay {
             opacity: 0.8;
+            transform: translateY(0);
         }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@800&family=Playfair+Display&display=swap" rel="stylesheet">
