--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
 
         .overlay {
             position: absolute;
-            bottom: 0px;
+            top: 10px;
             right: 10px;
             width: 50px;
             height: 50px;
             background: url('unnamed.png') center/contain no-repeat;
             opacity: 0;
-            transform: translateY(10px);
+            transform: translateY(-10px);
             transition: opacity 0.5s ease-out, transform 0.5s ease-out;
         }
 
