--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             position: relative;
             width: 280px;
             height: auto;
-            border-radius: 20px;
+            border-radius: auto;
             overflow: hidden;
         }
 
@@ -42,7 +42,7 @@
             width: 100%;
             height: auto;
             display: block;
-            border-radius: 20px;
+            border-radius: 10px;
             box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.2);
             transition: transform 0.3s ease-in-out;
         }
