--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             width: 100%;
             height: auto;
             display: block;
-            border-radius: auto;
+            border-radius: 10px;
             box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.2);
             transition: transform 0.3s ease-in-out;
         }
