--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             position: relative;
             width: 280px;
             height: auto;
-            border-radius: 10px;
+            border-radius: 20px;
             overflow: hidden;
         }
 
@@ -42,7 +42,7 @@
             width: 100%;
             height: auto;
             display: block;
-            border-radius: 10px;
+            border-radius: 20px;
             box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.2);
             transition: transform 0.3s ease-in-out;
         }
@@ -72,6 +72,12 @@
             opacity: 0.8;
             transform: translateY(0);
         }
+
+        .footer {
+            margin-top: 50px;
+            font-size: 12px;
+            color: #888;
+        }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@800&family=Playfair+Display&display=swap" rel="stylesheet">
 </head>
@@ -96,5 +102,6 @@
             <div class="overlay"></div>
         </div>
     </div>
+    <div class="footer">Site desenvolvido por Gefter Natã</div>
 </body>
 </html>
