--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@800&family=Playfair+Display&display=swap" rel="stylesheet">
 </head>
 <body>
-    <img src="unnamed.png" alt="Logo" class="logo">
+    <img src="logo_branca.png" alt="Logo" class="logo">
     <h1>Gefter Natã</h1>
     <div class="gallery">
         <div class="image-container">
