--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         }
         
         h1 {
-            font-family: 'Lato', sans-serif;
+            font-family: 'Eightone', sans-serif;
             font-weight: 800;
         }
 
