--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             right: 10px;
             width: 50px;
             height: 50px;
-            background: url('unnamed.png') center/contain no-repeat;
+            background: url('logo_fundopreto.png') center/contain no-repeat;
             opacity: 0;
             transform: translateY(-10px);
             transition: opacity 0.5s ease-out, transform 0.5s ease-out;
