--- a/index.html
+++ b/index.html
@@ -33,22 +33,19 @@
         .gallery .image-container {
             position: relative;
             width: 280px;
-            height: auto;
             border-radius: 20px;
             overflow: hidden;
+            transition: transform 0.3s ease-in-out;
+        }
+
+        .gallery .image-container:hover {
+            transform: scale(1.05);
         }
 
         .gallery img {
             width: 100%;
             height: auto;
             display: block;
-            border-radius: 20px;
-            box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.2);
-            transition: transform 0.3s ease-in-out;
-        }
-
-        .gallery img:hover {
-            transform: scale(1.05);
         }
 
         .logo {
