--- a/index.html
+++ b/index.html
@@ -33,19 +33,23 @@
         .gallery .image-container {
             position: relative;
             width: 280px;
+            height: 180px; /* Ajustado para manter proporção correta */
             border-radius: 20px;
             overflow: hidden;
-            transition: transform 0.3s ease-in-out;
-        }
-
-        .gallery .image-container:hover {
-            transform: scale(1.05);
         }
 
         .gallery img {
             width: 100%;
-            height: auto;
+            height: 100%;
+            object-fit: cover; /* Garante que a imagem preencha o espaço corretamente */
             display: block;
+            border-radius: 20px;
+            box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.2);
+            transition: transform 0.3s ease-in-out;
+        }
+
+        .gallery .image-container:hover img {
+            transform: scale(1.05);
         }
 
         .logo {
@@ -55,7 +59,7 @@
 
         .overlay {
             position: absolute;
-            top: 0px;
+            top: -2px; /* Ajustado para eliminar a linha branca */
             right: 10px;
             width: 50px;
             height: 50px;
