--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Gefter Natã</title>
     <style>
         body {
-            font-family: 'Playfair Display', serif;
+            font-family: 'TheBoldFont', bold;
             background-color: #1a1a1a;
-            color: #d9d9d9;
+            color: #38AD97;
             margin: 0;
             padding: 50px;
             text-align: center;
