--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gefter Natã</title>
     <style>
+        @font-face {
+            font-family: 'TheBoldFont';
+            src: url('TheBoldFont.ttf') format('truetype');
+            font-weight: bold;
+        }
+
         body {
             font-family: 'Playfair Display', serif;
             background-color: #1a1a1a;
@@ -15,8 +21,8 @@
         }
         
         h1 {
-            font-family: 'Eightone', sans-serif;
-            font-weight: 800;
+            font-family: 'TheBoldFont', sans-serif;
+            font-weight: bold;
         }
 
         .gallery {
@@ -33,22 +39,21 @@
         .gallery .image-container {
             position: relative;
             width: 280px;
-            height: 180px; /* Ajustado para manter proporção correta */
+            height: auto;
             border-radius: 20px;
             overflow: hidden;
         }
 
         .gallery img {
             width: 100%;
-            height: 100%;
-            object-fit: cover; /* Garante que a imagem preencha o espaço corretamente */
+            height: auto;
             display: block;
             border-radius: 20px;
             box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.2);
             transition: transform 0.3s ease-in-out;
         }
 
-        .gallery .image-container:hover img {
+        .gallery img:hover {
             transform: scale(1.05);
         }
 
@@ -59,7 +64,7 @@
 
         .overlay {
             position: absolute;
-            top: -2px; /* Ajustado para eliminar a linha branca */
+            top: -2px;
             right: 10px;
             width: 50px;
             height: 50px;
