--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <style>
         @font-face {
             font-family: 'TheBoldFont';
-            src: url('TheBoldFont.ttf') format('truetype');
-            font-weight: bold;
+            src: url('THEBOLDFONT-FREEVERSION.ttf') format('truetype');
+            font-weight: normal;
         }
 
         body {
