--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         /* Ajuste de foco para as duas primeiras imagens */
         .gallery .image-container:nth-child(1) img,
         .gallery .image-container:nth-child(2) img {
-            object-position: top; /* Ajusta o foco para a parte superior da imagem */
+            object-position: 50% 20%; /* Ajusta o foco para 20% mais acima */
         }
 
         .logo {
