--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         /* Ajuste de foco para as duas primeiras imagens */
         .gallery .image-container:nth-child(1) img,
         .gallery .image-container:nth-child(2) img {
-            object-position: 50% 50%; /* Ajusta o foco para 50% mais abaixo */
+            object-position: 50% 40%; /* Ajusta o foco para 10% mais acima */
         }
 
         .logo {
