--- a/index.html
+++ b/index.html
@@ -71,16 +71,16 @@
     <h1>Gefter Nat<span class="alt-font">ã</span></h1>
     <div class="gallery">
         <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/xA4_tkq3f90&t=29s&ab" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/xA4_tkq3f90&ab_channel=AdventistasANC" allowfullscreen></iframe>
         </div>
         <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/paixDxFjQ4k&ab" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/KkAst3GvwlU&ab_channel=AdventistasANC" allowfullscreen></iframe>
         </div>
         <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/KkAst3GvwlU&ab" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/paixDxFjQ4k&ab_channel=AdventistasANC" allowfullscreen></iframe>
         </div>
         <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/Uj2BSMoXiOs&ab" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/Uj2BSMoXiOs&ab_channel=AdventistasANC" allowfullscreen></iframe>
         </div>
     </div>
     <div class="footer">Site desenvolvido por Gefter Natã</div>
