--- a/index.html
+++ b/index.html
@@ -73,16 +73,16 @@
     <h1>Gefter Nat<span class="alt-font">ã</span></h1>
     <div class="gallery">
         <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/v=xA4_tkq3f90&ab_channel=AdventistasANC" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/watch?v=xA4_tkq3f90&ab_channel=AdventistasANC" allowfullscreen></iframe>
         </div>
         <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/v=KkAst3GvwlU&ab_channel=AdventistasANC" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/watch?v=KkAst3GvwlU&ab_channel=AdventistasANC" allowfullscreen></iframe>
         </div>
         <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/v=paixDxFjQ4k&ab_channel=AdventistasANC" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/watch?v=paixDxFjQ4k&ab_channel=AdventistasANC" allowfullscreen></iframe>
         </div>
         <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/v=Uj2BSMoXiOs&ab_channel=AdventistasANC" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/watch?v=Uj2BSMoXiOs&ab_channel=AdventistasANC" allowfullscreen></iframe>
         </div>
     </div>
     <div class="footer">Site desenvolvido por Gefter Natã</div>
