--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <h1>Gefter Nat<span class="alt-font">ã</span></h1>
     <div class="gallery">
         <div class="video-container large">
-            <iframe src="https://www.youtube.com/embed/link1" allowfullscreen></iframe>
+            <iframe src="https://youtu.be/Ja5CMMIviKM" allowfullscreen></iframe>
         </div>
         <div class="video-container large">
             <iframe src="https://www.youtube.com/embed/link2" allowfullscreen></iframe>
