--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
     <h1>Gefter Nat<span class="alt-font">ã</span></h1>
     <div class="gallery">
         <div class="video-container large">
-            <iframe src="https://youtu.be/Ja5CMMIviKM" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/Ja5CMMIviKM" allowfullscreen></iframe>
         </div>
         <div class="video-container large">
-            <iframe src="https://www.youtube.com/embed/link2" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/aJEtSVpSd2U" allowfullscreen></iframe>
         </div>
         <div class="video-container">
             <iframe src="https://www.youtube.com/embed/link3" allowfullscreen></iframe>
