--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             font-family: 'TheBoldFont', sans-serif;
             font-weight: bold;
             font-size: 36px;
+            margin-bottom: 1cm; /* Adiciona 1cm de margem inferior */
         }
 
         .alt-font {
